tests/agl/rejections/parse/stmt_in_case_expr_branch.agl
enum S
  | A
  | B
let s: S = A
let x = case s of
  | A => let y = 1
  | B => 2
